devops/kubernetes/logging/zipkin.yml
# zipkin-deployment-mysql
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: logging
  labels:
    app: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:latest
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"
            limits:
              memory: "2048Mi"
              cpu: "900m"
          ports:
            - containerPort: 9411
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 9411
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  namespace: logging
  labels:
    app: zipkin
spec:
  selector:
    app: zipkin
  ports:
    - name: http
      port: 9411
      targetPort: 9411
  type: ClusterIP
