devops/kubernetes/logging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-wildcard" # change if you use different issuer
spec:
  tls:
    - hosts:
        - rabbitmq.k8s.aravindweb.com
        - zipkin.k8s.aravindweb.com
      secretName: logging-k8s-aravindweb-com-tls
  rules:
    - host: rabbitmq.k8s.aravindweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-cluster
                port:
                  number: 15672
    - host: zipkin.k8s.aravindweb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin-service
                port:
                  number: 9411
